--- a/po/my/queue.po
+++ b/po/my/queue.po
@@ -1,17 +1,16 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Yhal Htet Aung <jumoun@gmail.com>, 2013.
+# Yhal Htet Aung <jumoun@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2013-04-01 21:37+0000\n"
-"Last-Translator: Yhal Htet Aung <jumoun@gmail.com>\n"
-"Language-Team: Burmese (http://www.transifex.com/projects/p/civicrm/language/my/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Burmese (http://www.transifex.com/civicrm/civicrm/language/my/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,4 +35,8 @@ msgstr ""
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
+msgstr ""
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
 msgstr ""
