po: update po/nl_NL/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/extension.po
+++ b/po/nl_NL/extension.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:03+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,11 +30,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "De webserver kan niet schrijven in de cache-map van de extensies (%1). Ga a.u.b. naar de pagina <a href=\"%2\">padinstellingen</a> en corrigeer dit.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "De externe URL van extensies wordt niet gecontroleerd aangezien ext_repo_url op Onwaar staat."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -56,10 +51,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Er zijn momenteel geen extensies in de openbare lijst van CiviCRM die compatibel zijn met versie %2 (<a href=\"%1\">hier gevraagde extensies</a>). Als u een extensie wilt installeren die niet aangemerkt is als compatibel, kunt u mogelijk <a href=\"%3\">handmatig extensies downloaden en installeren</a> (afhankelijk van de toegang tot uw webserver).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Er zijn geen extensies beschikbaar voor deze versie"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -117,6 +108,13 @@ msgid ""
 msgstr "U kunt nu geen extensie installeren omdat uw installatie van PHP geen ZIP-bestanden ondersteunt. Vraag a.u.b. de systeembeheerder om de standaard PHP-ZIP-extensie te installeren."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "WAARSCHUWING: Het downloadprogramma kan mogelijk geen bestanden downloaden die HTTP-doorverwijzing vereisen. Dit kan een kwestie zijn van de configuratie van open_basedir of safe_mode van PHP."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Het uitpakken van de extensie is mislukt vanwege de slechte mappenstructuur."
 
@@ -160,9 +158,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Er staat een kopie van de extensie (%1) in een systeemmap (%2). Deze versie wordt bewaard, maar de nieuwe versie zal worden gebruikt."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "WAARSCHUWING: Het downloadprogramma kan mogelijk geen bestanden downloaden die HTTP-doorverwijzing vereisen. Dit kan een kwestie zijn van de configuratie van open_basedir of safe_mode van PHP."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
