po: update po/nl_NL/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -12,9 +12,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:16+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +41,7 @@ msgstr "Bedrag volgende betaling"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Paid Amount"
-msgstr "Betaald Bedrag"
+msgstr "Betaald bedrag"
 
 #: CRM/Pledge/BAO/Pledge.php templates/CRM/Pledge/Page/Payment.tpl
 msgid "Paid Date"
@@ -53,12 +53,12 @@ msgid "Pledge Payment Status"
 msgstr "Betaalstatus toezegging"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - verschuldigd op %2 (achterstallige)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - verschuldigd op %2 (achterstallig)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - verschuldigd op %2"
+msgid "%1 - due on %2"
+msgstr "%1 - verschuldigd op %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -82,14 +82,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Frequentieinterval toezegging"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Status toezegging %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Betaalstatus toezegging %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Toezegging is een test"
 
@@ -100,6 +92,10 @@ msgstr "Financieel type - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Financiële Pagina - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "Contact ID %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -149,10 +145,6 @@ msgstr "Wijzigingsdatum toezegging"
 msgid "Pledge Cancelled Date"
 msgstr "Beëindigingsdatum toezegging"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Contact erelid toezegging"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Maximum aantal herinneringen"
@@ -191,12 +183,12 @@ msgid "Reminders Sent"
 msgstr "Herinneringen verzonden"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Geplande toezeggingsbetaling bewerken"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Betalingsschema toezeggingen is gewijzigd."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Toezegging van"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -303,6 +295,10 @@ msgid "Pledger Name or Email"
 msgstr "Naam of e-mail gever"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Naam Gever"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Toezeggingen zoeken"
 
@@ -311,12 +307,10 @@ msgid "Delete Pledges"
 msgstr "Toezeggingen verwijderen"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Verwijderde toezeggingen: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Aantal geselecteerde toezeggingen: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count toezegging verwijderd."
+msgstr[1] "%count toezeggingen verwijderd."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -325,6 +319,30 @@ msgstr "Lijst toezeggingen afdrukken"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "CiviCRM toezeggingensysteem"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "toegang tot CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Tonen toezeggingen"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "wijzigen toezeggingen"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Aanmaken en wijzigen toezeggingen"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "verwijderen in CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Verwijderen toezeggingen"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -342,11 +360,11 @@ msgid ""
 "pledge payments."
 msgstr "Als u deze toezegging annuleert, worden ook alle (onvoltooide) geplande betalingen erop geannuleerd."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Toezegging weergeven"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Toezegging bewerken"
 
@@ -354,7 +372,7 @@ msgstr "Toezegging bewerken"
 msgid "Cancel Pledge"
 msgstr "Toezegging annuleren"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Toezegging verwijderen"
 
@@ -375,20 +393,12 @@ msgid "Pledge Search"
 msgstr "Toezegging zoeken"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Toezeggingen afdrukken"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Toezeggingen exporteren"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Geplande toezeggingsbetaling bewerken"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Geplande datum voor de toezeggingsbetaling."
+msgid "Adjust scheduled amount"
+msgstr "Wijzig gepland bedrag"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -397,10 +407,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "U kunt geen ontvangstbevestiging voor deze toezegging verzenden omdat er geen e-mailadres voor dit contact is geregistreerd. Als u wilt dat er een ontvangstbevestiging verzonden wordt wanneer deze toezegging wordt vastgelegd, klik dan op Annuleren en klik in het overzicht op Bewerken om een e-mailadres toe te voegen voordat u de toezegging vastlegt."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Toezegging toevoegen"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -417,6 +423,10 @@ msgid ""
 msgstr "Overweeg om in plaats daarvan de toezegging te annuleren als u de historie wilt bewaren en verlies van betalingsgegevens wilt vermijden. Wilt u de status van de toezegging op Geannuleerd zetten en alle nog onbetaalde betalingen annuleren, klik dan eerst Annuleren op dit formulier. Klik vervolgens op de link meer &gt; in het toezeggingenoverzicht en kies de actie Annuleren."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Toezegging van"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -424,6 +434,7 @@ msgid ""
 msgstr "Totale toezegging is gewijzigd ten gevolge van aanpassingen in de betalingen. Het oorspronkelijk toegezegde bedrag was %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "termijnen van"
 
@@ -446,10 +457,6 @@ msgstr "Datum van de eerste toezeggingsbetaling."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Automatisch een ontvangstbevestiging deze toezegging e-mailen naar %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Automatisch een ontvangstbevestiging van deze toezegging mailen naar "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -475,20 +482,12 @@ msgstr "Toezeggingen zijn \"in afwachting\" tot de eerste betaling is ontvangen.
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Klik op OK om deze toezegging op te slaan en <strong>nu</strong> een ontvangstbevestiging naar %1 te verzenden"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Klik op OK om de toezegging te registreren EN een bevestiging te versturen naar %1."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Toegezegd door"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr " termijnen van "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr " elke "
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -515,10 +514,6 @@ msgid "Payments Ended Date"
 msgstr "Betaling einddatum"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Geen overeenkomende toezeggingen gevonden."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -531,8 +526,16 @@ msgid ""
 msgstr "Als u zoekt op periode of op een bedrag, probeer dan te zoeken met ruimere grenzen."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Klik op %1 om de toezeggingsbetalingen weer te geven."
+msgid "Click arrow to view pledge payments."
+msgstr "Klik op de pijl om de betalingen van de toezegging te bekijken."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Toon betalingen"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Verberg betalingen"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -552,10 +555,6 @@ msgstr "Te betalen"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Begindatum"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Toezegging gedaan"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -606,20 +605,12 @@ msgid "Amount Paid"
 msgstr "Betaald bedrag"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Betaling weergeven</a>."
+msgid "Credit Card Payment"
+msgstr "Creditcard Betaling"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Betaling vastleggen (Cheque, kas, overboeking, enz.)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Creditcardbetaling doen</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Geplande betaling bewerken</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Wijzig Geplande Betaling"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -639,9 +630,10 @@ msgstr "Om herinneringen te kunnen verzenden:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Moet uw sitebeheerder het meegeleverde script configureren dat de status van betalingen op toezeggingen bijwerkt en de herinneringen verzendt (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Uw sitebeheerder moet de taak configureren (Beheer > Systeeminstellingen > Geplande taken) die de status van de betaling van de toezegging wijzigt en de herinneringen verstuurd."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -661,13 +653,17 @@ msgstr "Toezeggingen die vanaf het begin van %1 ontvangen zijn."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Klik op <a href='%1'>Toezegging toevoegen</a> om een nieuwe toezegging vast te leggen die van dit contact ontvangen is."
+msgstr "Klik op <a %1>Toezegging toevoegen</a> om een nieuwe toezegging van dit contact te registreren."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Er van dit contact geen toezeggingen vastgelegd."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -793,94 +789,38 @@ msgstr "Dank u voor uw genereuze steun."
 msgid "Pledge Payment Reminder"
 msgstr "Toezegging betaalherinnering"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - verschuldigd op %2 (achterstallig)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - verschuldigd op %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Verwijderde toezegging(en): %1 (aantal geselecteerd: %2) "
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Wijzig gepland bedrag"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Klik op OK om de toezegging te registreren EN een bevestiging te versturen naar %1."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Klik op de pijl om de betalingen van de toezegging te bekijken."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Toon betalingen"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Verberg betalingen"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Creditcard Betaling"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Wijzig Geplande Betaling"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Uw sitebeheerder moet de taak configureren (Beheer > Systeeminstellingen > Geplande taken) die de status van de betaling van de toezegging wijzigt en de herinneringen verstuurd."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Klik op <a %1>Toezegging toevoegen</a> om een nieuwe toezegging van dit contact te registreren."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "Contact ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "Naam Gever"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count toezegging verwijderd."
-msgstr[1] "%count toezeggingen verwijderd."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "toegang tot CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Tonen toezeggingen"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "wijzigen toezeggingen"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Aanmaken en wijzigen toezeggingen"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "verwijderen in CiviPledge"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Verwijderen toezeggingen"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
